# ros2-ai-amr-repo4

./: .gitignore  README.md
ai_perception/face_recognition/: README.md  파일설명.txt
ai_perception/face_recognition/edge_face_system/: README.md  requirements-face.txt
ai_perception/face_recognition/edge_face_system/config/: edge_local.example.yaml  robot-face-globalcam-hd.sudoers
ai_perception/face_recognition/edge_face_system/launch/: aruco_globalcam.launch.py  attendance_local.launch.py  map_line_globalcam.launch.py  (+1 more)
ai_perception/face_recognition/edge_face_system/tts/ros2_ws/src/tb3_tts/: README.md  package.xml  setup.cfg  setup.py
ai_perception/face_recognition/edge_face_system/tts/ros2_ws/src/tb3_tts/resource/: tb3_tts
ai_perception/face_recognition/edge_face_system/tts/ros2_ws/src/tb3_tts/tb3_tts/: __init__.py  tts_node.py
ai_perception/object_recognition/: face_recognize_webcam.py  map_line_reference.py  파일설명.txt
ai_perception/object_recognition/launch/: globalcam_object_map.launch.py  turtlebot_safety.launch.py
ai_perception/object_recognition/pc_side/: globalcam_combined_detector_node.py  globalcam_combined_threaded_detector_node.py  globalcam_object_map_node.py  globalcam_turtlebot_proximity_node.py  globalcam_udp_display_node.py  globalcam_yolo_result_node.py  perception_node.py  ros_image_utils.py  safety_identity_node.py  turtlebot_safety_result_node.py  turtlebot_udp_display_node.py
ai_perception/object_recognition/scripts/: globalcam_udp_display_node  globalcam_yolo_result_node  turtlebot_safety_result_node  turtlebot_udp_display_node
(+61 files in other folders)
