<?xml version="1.0"?>
<package format="3">
  <name>tb3_tts</name>
  <version>0.1.0</version>
  <description>ROS 2 safety-announcement TTS receiver.</description>
  <maintainer email="gyul@todo.todo">gyul</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
